# Asset-Manager

./: .gitignore  .replit  CONTRIBUTING.md  README.md  blueprint_update_github.py  package-lock.json  package.json  pyproject.toml  replit.md  tailwind.config.ts
attached_assets/: Pasted--Task-Add-GitHub-functions-to-the-governed-blueprint-re_1772735292782.txt  Pasted--main-py--1772460614682_1772460614682.txt  Pasted-Excellent-That-s-the-correct-mental-model-You-are-not-m_1772582681198.txt  Pasted-Extend-the-social-platform-subsystem-by-implementing-pr_1772744178292.txt  Pasted-Good-From-now-on-we-fix-via-controlled-copy-paste-execu_1772465934230.txt  Pasted-I-need-you-to-update-this-project-into-a-fully-working-_1773789036705.txt  Pasted-Install-a-Worker-Orchestration-Layer-into-the-existing-_1773675517078.txt  Pasted-Now-that-the-Industrial-Glass-design-system-is-complete_1772747995217.txt  Pasted-REPLIT-BUILD-CIVIC-MISSION-CONTROL-INTELLIGENCE-LAYER-T_1772778637304.txt  Pasted-REPLIT-IMPLEMENT-MINIMAL-OPENCLAW-OPERATOR-INTEGRATION-_1773401270800.txt  Pasted-REPLIT-IMPLEMENT-SYSTEM-TIME-MACHINE-AND-PRINT-EXPORT-E_1772778337684.txt  Pasted-REPLIT-IMPLEMENT-UNIVERSAL-SOCIAL-CONNECTOR-LAYER-Add-a_1772759259040.txt  Pasted-REPLIT-REFACTOR-THE-APPLICATION-INTO-A-SINGLE-PAGE-MISS_1772759221840.txt  Pasted-TASK-Upgrade-POST-api-jobs-to-enforce-manifest-driven-e_1772636565968.txt  Pasted-TASK-Upgrade-the-current-Cancel-implementation-into-a-f_1772557604289.txt  Pasted-TASK-Upgrade-the-existing-Level-3-Governance-Layer-to-i_1772560133833.txt  (+7 more)
client/: index.html
src/: worker.py
(+184 files in other folders)
